Add consistent structure with header, main, footer to index and tweets pages

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Base Index</title>
+    <meta charset="UTF-8">
+    <title>My Portfolio - Home</title>
 </head>
 <body>
-  <h1>Welcome To My Cool Web page</h1>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-   <p>This is the first paragraph: a short introduction to the page.</p>
-  <p>This is the second paragraph: a little about what Im learning with ALX.</p>
-  <p>This is the third paragraph: I practice HTML, Git, and JavaScript.</p>
-  <p>This is the fourth paragraph: small projects help me build confidence.</p>
+    <main>
+        <article>
+            <h1>Welcome to My Portfolio</h1>
+            <h2>About This Page</h2>
+            <p>This is my first project in HTML.</p>
+            <p>I am learning step by step how to structure web pages.</p>
+            <h3>Learning Goals</h3>
+            <p>I want to improve my skills in frontend development.</p>
+            <p>This is a practice website to understand the basics.</p>
 
-  <h2>Section: What Im Practicing</h2>
-  <p>Here I describe the technologies I practice regularly: HTML, CSS, JS, and Git.</p>
+            <!-- Clickable image -->
+            <a href="https://www.alxafrica.com/" target="_blank">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
+            </a>
+        </article>
 
-  <h3>Subsection: Quick Links</h3>
-  <p>Below is a clickable image. Click it to open an example site in a new tab.</p>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
 
-  <!-- Clickable image linking to example.com (replace with a URL you want) -->
-  <a href="https://example.com" target="_blank" rel="noopener noreferrer">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo" style="max-width:300px;">
-  </a>
-
+    <footer>
+        <p>Made by Becky Namarome - <a href="https://github.com/namaromebecky" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
