Add base_index.html and tweets.html with structure

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,19 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>My Tweets</title>
+  <title>Base Index</title>
 </head>
 <body>
-  <h1>My Tweet</h1>
-
-  <!-- Example embedded tweet -->
-  <blockquote class="twitter-tweet">
-    <p lang="en" dir="ltr">Learning HTML basics with ALX is fun! 🚀 #ALX_SE</p>
-    &mdash; ALX Example (@alxexample) 
-    <a href="https://twitter.com/alxexample/status/1234567890">March 1, 2025</a>
-  </blockquote> 
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-  <p><a href="tweets.html">Like My Tweet</a></p>
+  <h1>Base index</h1>
+  <p>This is a very simple and valid HTML file for the html_basic exercise.</p>
 </body>
 </html>
