Add base_index.html and tweets.html with structure

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Base Index</title>
+    <meta charset="UTF-8">
+    <title>My Portfolio - Tweets</title>
 </head>
 <body>
-  <h1>Base index</h1>
-  <p>This is a very simple and valid HTML file for the html_basic exercise.</p>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+
+    <main>
+        <article>
+            <h1>My Tweets</h1>
+
+            <!-- Placeholder Embedded Tweet -->
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Learning web development step by step 🚀 #ALX_SE</p>
+                &mdash; becky Namarome (@namaromebecky)
+                <a href="https://twitter.com/example/status/123456789">March 21, 2025</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+            <p>Check out more about me on my <a href="index.html">homepage</a>.</p>
+        </article>
+
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by Becky Namarome - <a href="https://github.com/namaromebecky" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
