--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -17,6 +17,40 @@
             <h1>Welcome to My Portfolio</h1>
             <h2>About This Page</h2>
             <p>This is my first project in HTML.</p>
+
+                <h2>Learners Information</h2>
+    <table border="1">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Age</th>
+          <th>Country</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>John</td>
+          <td>25</td>
+          <td>USA</td>
+        </tr>
+        <tr>
+          <td>Emily</td>
+          <td>28</td>
+          <td>Canada</td>
+        </tr>
+        <tr>
+          <td>Michael</td>
+          <td>32</td>
+          <td>Australia</td>
+        </tr>
+        <tr>
+          <td>Sophia</td>
+          <td>21</td>
+          <td>UK</td>
+        </tr>
+      </tbody>
+    </table>
+
             <p>I am learning step by step how to structure web pages.</p>
             <h3>Learning Goals</h3>
             <p>I want to improve my skills in frontend development.</p>
